--- a/res/css/style.css
+++ b/res/css/style.css
@@ -6554,6 +6554,23 @@ input[type="radio"] {
   input[type="radio"]:checked:before {
     background-color: #df0687; }
 
+.daterangepicker td.active,
+.daterangepicker td.active:hover {
+  background-color: #df0687; }
+
+.daterangepicker.dropdown-menu {
+  max-width: 100vw;
+  top: 26px !important;
+  right: 2px !important;
+  left: auto !important; }
+  @media (max-width: 575px) {
+    .daterangepicker.dropdown-menu {
+      right: -40px !important; }
+      .daterangepicker.dropdown-menu:before {
+        right: 49px !important; }
+      .daterangepicker.dropdown-menu:after {
+        right: 50px !important; } }
+
 /* links */
 a {
   -webkit-transition: all 0.3s;
@@ -7028,6 +7045,28 @@ h1, h2, h3, h4, h5, h6 {
         .modal-std .modal-dialog .modal-content .modal-body .input-wrap input[type="checkbox"], .modal-std .modal-dialog .modal-content .modal-body .input-wrap input[type="radio"] {
           min-width: 14px;
           margin-right: 4px; }
+        .modal-std .modal-dialog .modal-content .modal-body .input-wrap .custom-picker-block {
+          position: relative;
+          flex: 1 1 auto; }
+          .modal-std .modal-dialog .modal-content .modal-body .input-wrap .custom-picker-block input[type="date"].custom-picker {
+            width: 100%; }
+            .modal-std .modal-dialog .modal-content .modal-body .input-wrap .custom-picker-block input[type="date"].custom-picker::-webkit-inner-spin-button, .modal-std .modal-dialog .modal-content .modal-body .input-wrap .custom-picker-block input[type="date"].custom-picker::-webkit-calendar-picker-indicator, .modal-std .modal-dialog .modal-content .modal-body .input-wrap .custom-picker-block input[type="date"].custom-picker::-webkit-clear-button {
+              display: none;
+              -webkit-appearance: none; }
+          .modal-std .modal-dialog .modal-content .modal-body .input-wrap .custom-picker-block .date-picker {
+            display: block;
+            position: absolute;
+            top: 50%;
+            right: 0.5em;
+            -webkit-transform: translateY(-50%);
+            -moz-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            -o-transform: translateY(-50%);
+            transform: translateY(-50%);
+            color: #6f6f6f;
+            opacity: 0.75; }
+            .modal-std .modal-dialog .modal-content .modal-body .input-wrap .custom-picker-block .date-picker:hover {
+              opacity: 1; }
         .modal-std .modal-dialog .modal-content .modal-body .input-wrap label {
           min-width: 115px; }
         .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios {
@@ -7055,6 +7094,28 @@ h1, h2, h3, h4, h5, h6 {
           .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios input[type="checkbox"], .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios input[type="radio"] {
             min-width: 14px;
             margin-right: 4px; }
+          .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios .custom-picker-block {
+            position: relative;
+            flex: 1 1 auto; }
+            .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios .custom-picker-block input[type="date"].custom-picker {
+              width: 100%; }
+              .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios .custom-picker-block input[type="date"].custom-picker::-webkit-inner-spin-button, .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios .custom-picker-block input[type="date"].custom-picker::-webkit-calendar-picker-indicator, .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios .custom-picker-block input[type="date"].custom-picker::-webkit-clear-button {
+                display: none;
+                -webkit-appearance: none; }
+            .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios .custom-picker-block .date-picker {
+              display: block;
+              position: absolute;
+              top: 50%;
+              right: 0.5em;
+              -webkit-transform: translateY(-50%);
+              -moz-transform: translateY(-50%);
+              -ms-transform: translateY(-50%);
+              -o-transform: translateY(-50%);
+              transform: translateY(-50%);
+              color: #6f6f6f;
+              opacity: 0.75; }
+              .modal-std .modal-dialog .modal-content .modal-body .input-wrap.radios .custom-picker-block .date-picker:hover {
+                opacity: 1; }
     .modal-std .modal-dialog .modal-content .modal-footer {
       border: none;
       justify-content: space-between;
@@ -7093,6 +7154,28 @@ h1, h2, h3, h4, h5, h6 {
           .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap input[type="checkbox"], .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap input[type="radio"] {
             min-width: 14px;
             margin-right: 4px; }
+          .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap .custom-picker-block {
+            position: relative;
+            flex: 1 1 auto; }
+            .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap .custom-picker-block input[type="date"].custom-picker {
+              width: 100%; }
+              .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap .custom-picker-block input[type="date"].custom-picker::-webkit-inner-spin-button, .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap .custom-picker-block input[type="date"].custom-picker::-webkit-calendar-picker-indicator, .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap .custom-picker-block input[type="date"].custom-picker::-webkit-clear-button {
+                display: none;
+                -webkit-appearance: none; }
+            .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap .custom-picker-block .date-picker {
+              display: block;
+              position: absolute;
+              top: 50%;
+              right: 0.5em;
+              -webkit-transform: translateY(-50%);
+              -moz-transform: translateY(-50%);
+              -ms-transform: translateY(-50%);
+              -o-transform: translateY(-50%);
+              transform: translateY(-50%);
+              color: #6f6f6f;
+              opacity: 0.75; }
+              .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap .custom-picker-block .date-picker:hover {
+                opacity: 1; }
           .modal-std .modal-dialog .modal-content .modal-footer .password-recovery .input-wrap label {
             font-size: 0.6875rem; }
       .modal-std .modal-dialog .modal-content .modal-footer .small-print {
@@ -7155,7 +7238,8 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: flex-start;
   align-items: center;
   flex-flow: row wrap;
-  padding: 13px 24px 13px 0; }
+  flex: 0 0 175px;
+  padding: 13px 0; }
   #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap label {
     margin-bottom: 0;
     padding-right: 10px;
@@ -7176,6 +7260,28 @@ h1, h2, h3, h4, h5, h6 {
   #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap input[type="checkbox"], #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap input[type="radio"] {
     min-width: 14px;
     margin-right: 4px; }
+  #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap .custom-picker-block {
+    position: relative;
+    flex: 1 1 auto; }
+    #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap .custom-picker-block input[type="date"].custom-picker {
+      width: 100%; }
+      #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap .custom-picker-block input[type="date"].custom-picker::-webkit-inner-spin-button, #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap .custom-picker-block input[type="date"].custom-picker::-webkit-calendar-picker-indicator, #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap .custom-picker-block input[type="date"].custom-picker::-webkit-clear-button {
+        display: none;
+        -webkit-appearance: none; }
+    #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap .custom-picker-block .date-picker {
+      display: block;
+      position: absolute;
+      top: 50%;
+      right: 0.5em;
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      -o-transform: translateY(-50%);
+      transform: translateY(-50%);
+      color: #6f6f6f;
+      opacity: 0.75; }
+      #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap .custom-picker-block .date-picker:hover {
+        opacity: 1; }
   #signup-modal .modal-dialog .modal-content .modal-body .input-wrap.radios .input-wrap label {
     margin-top: 0;
     margin-bottom: 0; }
