--- a/res/sass/_mixins.scss
+++ b/res/sass/_mixins.scss
@@ -68,7 +68,12 @@
   align-items: center;
   flex-flow: row wrap;
   & label {
-    margin-bottom: 0;
+    @if ($label-width == 100%) {
+      margin-bottom: 0.3em;
+      margin-top: 0.571428571em;
+    } @else {
+      margin-bottom: 0;
+    }
     padding-right: 10px;
     flex: 0 0 $label-width;
     max-width: $label-width;
@@ -83,6 +88,12 @@
     line-height: 1.14;
     color: #585858;
   }
+  & .required-icon {
+    fill: #ec008c;
+    width: 2.5em;
+    height: 30px;
+    padding: 0.5em;
+  }
   & input[type="text"],
   & input[type="email"],
   & input[type="number"],
@@ -96,28 +107,71 @@
     min-width: 14px;
     margin-right: 4px;
   }
-  & .custom-picker-block {
-    position: relative;
-    flex: 1 1 auto;
-    & input[type="date"].custom-picker {
-      width: 100%;
-      &::-webkit-inner-spin-button,
-      &::-webkit-calendar-picker-indicator,
-      &::-webkit-clear-button {
-        display: none;
-        -webkit-appearance: none;
+  & .custom-file {
+    & .icon {
+      z-index: -1;
+      height: 20px;
+    }
+    &:hover,
+    &:focus {
+      & .icon {
+        opacity: 1;
       }
     }
-    & .date-picker {
+  }
+  & .custom-input {
+    height: 30px;
+    position: relative;
+    flex: 1 1 auto;
+    & input {
+      width: 100%;
+      &[type="date"].custom-picker {
+        &::-webkit-inner-spin-button,
+        &::-webkit-calendar-picker-indicator,
+        &::-webkit-clear-button {
+          display: none;
+          -webkit-appearance: none;
+        }
+      }
+    }
+    & .file-path {
+      display: block;
+      width: 100%;
+      height: 30px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1
+    }
+    & .icon {
       display: block;
       position: absolute;
       top: 50%;
       right: 0.5em;
       @include crossTransform(translateY(-50%));
       color: #6f6f6f;
+      @include crossTransition(all .3s);
       opacity: 0.75;
+      & svg {
+        fill: #6f6f6f;
+      }
       &:hover {
         opacity: 1;
+      }
+    }
+  }
+  &.radios,
+  &.checks {
+    & label {
+      margin-top: 8px;
+      margin-bottom: 13px;
+    }
+    & .input-wrap {
+      padding: 13px 0;
+      margin: 0;
+      & label {
+        margin-top: 0;
+        margin-bottom: 0;
       }
     }
   }
